<resources>
    <string name="app_name">funteam</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="signup">SIGN UP</string>
    <string name="terms">By pressing \'SIGN UP\' you agree to our terms and conditions</string>
    <string name="log_in">LOG IN</string>
    <string name="groups_coming_soon">GROUPS COMING SOON!</string>
    <string name="settings_coming_soon">SETTINGS COMING SOON!</string>
    <string name="profile_coming_soon">PROFILE COMING SOON!</string>
    <string name="data_1">data1</string>
    <string name="data_2">data2</string>
    <string name="data_3">data3</string>
    <string name="data_4">data4</string>
    <string name="value1">value1</string>
    <string name="value2">value2</string>
    <string name="value3">value3</string>
    <string name="value4">value4</string>
    <string name="etFN">etFN</string>
    <string name="etLN">etLn</string>
    <string name="etU">etU</string>
    <string name="etE">etE</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user">New User?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="name">Name</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="join_group">JOIN GROUP</string>
    <string name="create_group">CREATE GROUP</string>
    <string name="you">ME: </string>
    <string name="colorName">#EF9E73</string>
    <string name="choose_meme">Choose Meme</string>
    <string name="post">POST</string>
    <string name="no_blank">You cannot send blank message</string>
    <string name="upload_successful">Upload Successful</string>
    <string name="upload_failed">Upload Failed</string>
</resources>
