<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tenDP"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_marginLeft="280dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person_black_24dp" />
                <Button
                    android:textSize="@dimen/fifteenDP"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="@dimen/eightyDP"
                    android:layout_height="@dimen/thirtyFIveDP"
                    android:background="#FDC677"
                    android:text="@string/log_in"/>

            </LinearLayout>


            <ImageView
                android:layout_marginTop="@dimen/fiftyDP"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hunEightyDP"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/sixtyDP"
            android:layout_width="@dimen/threeHunDP"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/first_name_hint"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/last_name_hint"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/email_hint"
                android:layout_gravity="center" />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username_hint"
                android:layout_gravity="center" />
            <Button
                android:layout_marginTop="@dimen/fourtyDP"
                android:id="@+id/signUpButton"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:background="@color/signup_button_background"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="@dimen/tenDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/terms"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>