<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tenDP"
            android:orientation="vertical">



            <ImageView
                android:layout_marginTop="@dimen/fiftyDP"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hunEightyDP"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/sixtyDP"
            android:layout_width="@dimen/threeHunDP"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/email_hint"
                android:layout_gravity="center" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_gravity="center" />
            <Button
                android:layout_marginTop="@dimen/fourtyDP"
                android:id="@+id/signUpButton"
                android:textSize="20dp"
                android:onClick="registerUser"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:background="@color/signup_button_background"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_marginTop="@dimen/tenDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/have_account"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/tenDP"
                    android:onClick="gotoSignIn"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/fifteenDP"
                    android:textStyle="bold"
                    android:textColor="@color/sign_up"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/main_background"
                    android:background="@color/main_background"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/sign_up"
                android:visibility="gone">
            </ProgressBar>

        </LinearLayout>
    </LinearLayout>
</ScrollView>